--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
       You need to enable JavaScript to run this app.
     </noscript>
     <div id="root"></div>
-    
+    <h1>This is my page on git pages</h1>
   </body>
 </html>
