--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <title>React App</title>
   </head>
   <body>
-    <noscript>
-      You need to enable JavaScript to run this app.
-    </noscript>
-    <div id="root"></div>
-    <h1>This is my page on git pages</h1>
+<h1>This is my page on git pages</h1>
+    <div id="root">
+    <h1>This is my page on git pages</h1>`
+    </div>
+    
   </body>
 </html>
