--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
   <body>
     <div id="root">
     </div>
-    <script type="text/javascript" src="/static/js/main.dd149302.js"></script>
+    <script type="text/javascript" src="main.dd149302.js"></script>
   </body>
 </html>
