--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no"><meta name="theme-color" content="#000000"><link rel="manifest" href="/somenew/index.html/manifest.json"><link rel="shortcut icon" href="/somenew/index.html/favicon.ico"><title>React App</title><link href="/somenew/index.html/static/css/main.44db7288.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><script type="text/javascript" src="/somenew/index.html/static/js/main.bb9cda02.js"></script></body></html>
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
+  <meta name="theme-color" content="#000000"><link rel="manifest" href="/somenew/manifest.json">
+  <link rel="shortcut icon" href="/somenew/index.html/favicon.ico"><title>React App</title>
+  <link href="/somenew/index.html/static/css/main.44db7288.css" rel="stylesheet"></head><body>
+  <noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div>
+  <script type="text/javascript" src="/somenew/main.bb9cda02.js"></script></body></html>
